file(GLOB_RECURSE TEST_UTILS *.cxx)
add_library(testutils SHARED ${TEST_UTILS})
set_target_properties(testutils PROPERTIES INSTALL_RPATH "${EXEC_DIR};${Torch_LINK_DIRECTORIES}")
target_link_libraries(testutils PUBLIC neml2)
target_include_directories(testutils PUBLIC ${NEML2_SOURCE_DIR}/tests/include)
install(TARGETS testutils)
